# compact-common

./: LICENSE  README.md  pyproject.toml  requirements.md
.github/workflows/: ci.yml
docs/: README.md
src/compact_common/: __init__.py  _version.py  constants.py
src/compact_common/bayesian/: __init__.py
src/compact_common/eos/: __init__.py  base.py  fermi_gas.py  polytrope.py  sigma_omega.py  tabulated.py
src/compact_common/radiation/: __init__.py
src/compact_common/spacetime/: __init__.py  geodesics.py  kerr.py  schwarzschild.py
src/compact_common/structure/: __init__.py  star.py  tidal.py  tov.py
tests/: test_eos.py
